<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".popups.PopUpEditDogName">

    <TextView
        android:id="@+id/PopUpDogNameTextView"
        android:layout_width="74dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/SignUpDogName"
        android:textColor="@color/colorFontMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PopUpDogNameTextInputLayout"
        android:layout_width="342dp"
        android:layout_height="116dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/PopUpDogNameTextInputEditText"
            android:layout_width="297dp"
            android:layout_height="89dp"
            android:background="@color/boxFiller"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/SignUpDogNameHint"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@color/colorFontMain"
            android:textColorHint="@color/colorFontHint"
            android:textSize="12sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/PopUpDogNameSaveButton"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/PopUpDogEditDescriptionSaveButton"
        android:textAllCaps="false"
        android:textColor="@color/colorFontWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/PopUpDogNameCancelButton"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/PopUpDogEditDescriptionCancelButton"
        android:textAllCaps="false"
        android:textColor="@color/colorFontWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

</android.support.constraint.ConstraintLayout>