<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFontWhite"
    tools:context=".popups.PopUpEditDescription">

    <TextView
        android:id="@+id/ProfileInformationDogDescriptionTextView"
        android:layout_width="117dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/PopUpDogDescription"
        android:textColor="@color/colorFontMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PopUpDescriptionTextInputLayout"
        android:layout_width="293dp"
        android:layout_height="153dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/PopUpDescriptionTextInputEditText"
            android:layout_width="275dp"
            android:layout_height="117dp"
            android:background="@color/boxFiller"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/PopUpDogEditDescription"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@color/colorFontMain"
            android:textColorHint="@color/colorFontHint"
            android:textSize="12sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/PopUpDescriptionSaveButton"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/PopUpDogEditDescriptionSaveButton"
        android:textAllCaps="false"
        android:textColor="@color/colorFontWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/PopUpDescriptionCancelButton"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/PopUpDogEditDescriptionCancelButton"
        android:textAllCaps="false"
        android:textColor="@color/colorFontWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

</android.support.constraint.ConstraintLayout>